# curie-rlm-env

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
config/: curie_tasks.yaml  judge.yaml  rubric_dispatcher.yaml  safeguards.yaml
config/frozen_prompts/: README.md
configs/: curie_eval_phase1.toml  curie_grpo_continual_phase1.toml  curie_grpo_continual_phase2.toml  curie_grpo_continual_phase3.toml  curie_grpo_freeform.toml  curie_grpo_geometric.toml  curie_grpo_retrieval.toml  curie_rft_phase1.toml
docker/: sandbox.Dockerfile
docs/: STAGE_5_5_CONTINGENCY.md
scripts/: build_splits.py  check_local_inference_routing.py  check_local_runtime.py  debug_has_answer_flow.py  debug_rollouts.py  debug_rollouts.sh  eval_retention_forgetting.py  extract_high_reward_rollouts.py  generate_report.py  investigate_gt_format.py  patch_qwen3_8b_long_context.py  probe_rollout_timing.py  repro_has_final_answer.py  repro_rollout_concurrent.py  repro_rollout_phase.py  repro_zmq_subprocess.py  run_baseline_eval.py  run_continual_phase1.sh  run_continual_phase2.sh  run_continual_phase3.sh  run_full_eval.py  run_phase1.sh  run_phase2.sh  run_phase3.sh  run_rft.sh  run_rlm_ablation.py
src/curie_rlm_env/: __init__.py  baseline_eval.py  continual.py  datasets.py  env.py  judge.py  rubric.py  (+6 more)
tests/: test_continual_env.py  test_continual_replay_dataset.py  test_stage0_locks.py  test_stage1_imports.py  test_stage2_env.py  test_stage3_5_baseline.py  test_stage3_5_splits.py  test_stage3_rubric.py  test_stage5_5_rft.py  test_stage5b_configs.py  test_stage7_eval.py
(+3 files in other folders)
