[project]
name = "curie-rlm-env"
version = "0.1.0"
requires-python = "~=3.12.0"
dependencies = [
    "verifiers>=0.1.8",
    "pyyaml>=6.0",
    "json5>=0.9",
    "rouge-score>=0.1.2",
    "bert-score>=0.3",
    "biopython>=1.84",
    "Levenshtein>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curie_rlm_env"]

[dependency-groups]
dev = ["pytest", "black", "ruff", "pytest-cov"]

[tool.uv.sources]
verifiers = { git = "https://github.com/PrimeIntellect-ai/verifiers.git", rev = "3b77145" }

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin'",
]

[tool.ruff]
line-length = 120
